Tror jeg fikk det ish til?
Har lagd en Admin Login page, den sender deg videre til en Admin Page med oversikt over alle "options" du har som: View All, Update, create og Delete posts

--- a/HTML/admin-page.html
+++ b/HTML/admin-page.html
@@ -49,17 +49,14 @@
 
                     <div class="logo-inside-frame">
 
-                        <form id="login" class="login-form">
+                        <div class="inside">
+                            <h1>Please Select an Option, Mr. Admin</h1>
 
-                            <label for="username">User Name:</label>
-                            <input type="text" name="username" id="username" placeholder="Enter your username">
-                    
-                            <label for="password">Password:</label>
-                            <input type="password" name="password" id="password" placeholder="Enter your password">
-                    
-                            <button type="submit">Login</button>
-
-                        </form>
+                            <a href="/HTML/admin-all.html">View All Posts</a>
+                            <a href="/HTML/admin-update.html">Update a Post</a>
+                            <a href="/HTML/admin-create.html">Create New Post</a>
+                            <a href="/HTML/admin-delete.html">Delete a Post</a>
+                        </div>
 
                     </div>
 
