new day, new fails

--- a/HTML/admin-page.html
+++ b/HTML/admin-page.html
@@ -70,7 +70,7 @@
                                 
                                 <a href="/HTML/admin-create.html" class="admin-button" id="create-button">Create Post</a>
                                 <a href="/HTML/admin-update.html" class="admin-button" id="update-button">Update Post</a>
-                                <a href="/HTML/admin-delete.html" class="admin-button" id="delete-button">Delete</a>
+                                <a href="/HTML/admin-delete.html" class="admin-button" id="delete-button">Delete Post</a>
                                 <a href="/HTML/admin-login.html" class="admin-button" id="loggout-button">Logg Out</a>
     
                                 <div class="right-s-info">
