trying again with the id

--- a/HTML/admin-page.html
+++ b/HTML/admin-page.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <script src="/JS/admin-page.js"></script>
+    <script src="/JS/admin-page.js" defer></script>
 
     <header>
         <nav>
