--- a/HTML/blog-post-detail.html
+++ b/HTML/blog-post-detail.html
@@ -20,8 +20,7 @@
 
 <body>
 
-    <script src="/JS/blog-post-detail.js"></script>
-    <script src="/JS/admin-page.js"></script>
+    <script src="/JS/blog-post-detail.js" defer></script>
 
     <header>
         <nav>
@@ -46,7 +45,7 @@
             <div class="scroll-content">
 
                 <div class="blog-detail">
-
+            
                 </div>
 
             </div>
