--- a/HTML/Admin/admin-login.html
+++ b/HTML/Admin/admin-login.html
@@ -12,10 +12,10 @@
 
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="/CSS/header.css">
-    <link rel="stylesheet" href="/CSS/admin-login.css">
+    <link rel="stylesheet" href="/CSS/Admin/admin-login.css">
 
     <script src="https://kit.fontawesome.com/2ef99fbf3a.js" crossorigin="anonymous"></script>
-    <script src="/JS/auth-login.js"></script>
+    <script src="/JS/Admin/auth-login.js"></script>
 
 </head>
 
@@ -29,10 +29,11 @@
             </a>
 
             <li>
-                <a href="">All Posts</a>
-                <a href="">Indoor Plants</a>
-                <a href="">Edible Plants</a>
-                <a href="">Animal Friendly Plants</a>
+                <a href="all-posts.html">All Posts</a>
+                <a href="indoor.html">Indoor Plants</a>
+                <a href="outdoor.html">Outdoor Plants</a>
+                <a href="edible.html">Edible Plants</a>
+                <a href="animal.html">Animal Friendly Plants</a>
             </li>
         </nav>
     </header>
