--- a/HTML/blog-post-detail.html
+++ b/HTML/blog-post-detail.html
@@ -21,19 +21,19 @@
 <body>
 
     <script src="/JS/blog-post-detail.js" defer></script>
+    <script src="/JS/updated-post-info.js" defer></script>
 
     <header>
         <nav>
-
             <a href="/HTML/index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
-
             <li>
-                <a href="">All Posts</a>
-                <a href="">Indoor Plants</a>
-                <a href="">Edible Plants</a>
-                <a href="">Animal Friendly Plants</a>
+                <a href="all-posts.html">All Posts</a>
+                <a href="indoor.html">Indoor Plants</a>
+                <a href="outdoor.html">Outdoor Plants</a>
+                <a href="edible.html">Edible Plants</a>
+                <a href="animal.html">Animal Friendly Plants</a>
             </li>
         </nav>
     </header>
@@ -61,7 +61,7 @@
                             <div class="right-s-text">
                                 <h2>About Me</h2>
 
-                                <a href="admin-login.html">
+                                <a href="/HTML/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
@@ -69,9 +69,9 @@
                                 <p>My journey began with a few humble succulents adorning my apartment windowsill, but it didn't take long for their leafy charms to capture my heart and ignite a passion within me.</p>
                                 <p>Join me on this journey of growth, resilience, and endless botanical wonders. Together, let's embrace the magic of plants and nurture our spirits as we cultivate a greener, more vibrant world. Whether you're a seasoned plant parent or a budding enthusiast, there's always room in my digital garden for you. So, grab your watering can and let's sow the seeds of joy and discovery together!</p>
     
-                                <div class="right-s-info">
-                                    <p><span>Total Posts:</span> 12</p>
-                                    <p><span>Last Posted:</span> 27.05.2024</p>
+                                <div class="right-s-info" id="rightSInfo">
+                                    <p><span>Total Posts:</span> <span id="totalPosts"></span></p>
+                                    <p><span>Last Posted:</span> <span id="lastPosted"></span></p>
                                 </div>
                             </div>
 
