made a go back button, also edited a tad bit in the blog post details

--- a/HTML/animal.html
+++ b/HTML/animal.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <script src="/JS/indoor.js" defer></script>
+    <script src="/JS/animal.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
 
     <header>
@@ -34,15 +34,21 @@
 
     <main>
         <section class="main-content">
+            
             <div class="scroll-content">
                 <h1>"Animal Friendly" Plants Blogs</h1>
                 <div class="all-blogs"></div>
             </div>
+
             <div class="un-scroll-content">
 
                 <div class="right-s-content">
 
                     <div class="right-s-background">
+
+                        <div class="gobackbutton">
+                            <a href="javascript:window.history.back();"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                        </div>
 
                         <div class="right-s-box">
 
