--- a/HTML/edible.html
+++ b/HTML/edible.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <script src="/JS/indoor.js" defer></script>
+    <script src="/JS/edible.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
 
     <header>
@@ -44,6 +44,10 @@
                 <div class="right-s-content">
 
                     <div class="right-s-background">
+
+                        <div class="gobackbutton">
+                            <a href="javascript:window.history.back();"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                        </div>
 
                         <div class="right-s-box">
 
