--- a/HTML/outdoor.html
+++ b/HTML/outdoor.html
@@ -46,6 +46,10 @@
 
                     <div class="right-s-background">
 
+                        <div class="gobackbutton">
+                            <a href="javascript:window.history.back();"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                        </div>
+
                         <div class="right-s-box">
 
                             <div class="right-s-text">
