the image still doesnt show up, give up for today, trying to make a delete button instead

--- a/HTML/Admin/admin-blog-post.html
+++ b/HTML/Admin/admin-blog-post.html
@@ -71,6 +71,10 @@
                                 <div class="edit-post-button">
 
                                 </div>
+
+                                <div class="delete-button">
+                                    <button id="deletePostButton" class="delete-post-button">Delete Post</button>
+                                </div>
     
                                 <div class="right-s-info" id="rightSInfo">
                                     <p><span>Total Posts:</span> <span id="totalPosts"></span></p>
