the buttons are on the correct place, now to only make them actually useful

--- a/HTML/Admin/admin-blog-post.html
+++ b/HTML/Admin/admin-blog-post.html
@@ -21,6 +21,7 @@
 <body>
 
     <script src="/JS/Admin/admin-blog-post-detail.js" defer></script>
+    <script src="/JS/updated-post-info.js" defer></script>    
 
     <header>
         <nav>
@@ -67,13 +68,9 @@
                                 <a href="/HTML/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
-                                
-                                <div class="edit-post-button">
 
-                                </div>
+                                <div class="blog-post-buttons">
 
-                                <div class="delete-button">
-                                    <button id="deletePostButton" class="delete-post-button">Delete Post</button>
                                 </div>
     
                                 <div class="right-s-info" id="rightSInfo">
