gonna make a footer next

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
 
     <script src="/JS/newly-posted.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
-    
+    <script src="/JS/all-posts-index.js" defer></script>
 
     <header>
         <nav>
@@ -69,7 +69,19 @@
 
                     <h2>Freshly Picked Posts</h2>
 
-                    <div class="newly-posted">
+                    <div class="newly-posted-carousel">
+                        <div class="newly-posted">
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="all-posts-container">
+
+                    <h2>All Posts</h2>
+
+                    <div class="all-posts-index">
+
                     </div>
                 </div>
 
