--- a/HTML/Admin/admin-login.html
+++ b/HTML/Admin/admin-login.html
@@ -29,12 +29,27 @@
             </a>
 
             <li>
-                <a href="all-posts.html">All Posts</a>
-                <a href="indoor.html">Indoor Plants</a>
-                <a href="outdoor.html">Outdoor Plants</a>
-                <a href="edible.html">Edible Plants</a>
-                <a href="animal.html">Animal Friendly Plants</a>
+                <a href="all-posts.html" class="head-link1">All Posts</a>
+                <a href="all-posts.html" class="head-icon1"><i class="fa-solid fa-book-open"></i></a>
             </li>
+            <li>
+                <a href="indoor.html" class="head-link2">Indoor Plants</a>
+                <a href="indoor.html" class="head-icon2"><i class="fa-solid fa-seedling"></i></a>
+            </li>
+            <li>
+                <a href="outdoor.html" class="head-link3">Outdoor Plants</a>
+                <a href="outdoor.html" class="head-icon3"><i class="fa-solid fa-sun-plant-wilt"></i></a>
+            </li>
+            <li>
+                <a href="edible.html" class="head-link4">Edible Plants</a>
+                <a href="edible.html" class="head-icon4"><i class="fa-solid fa-apple-whole"></i></a>
+            </li>
+            <li>
+                
+                <a href="animal.html" class="head-link5">Animal Friendly Plants</a>
+                <a href="animal.html" class="head-icon5"><i class="fa-solid fa-paw"></i></a>
+            </li>
+
         </nav>
     </header>
 
@@ -72,8 +87,31 @@
     </main>
 
     <footer>
-    </footer>
 
+        <div class="footer-logo">
+            <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady">
+        </div>
+
+        <div class="footer-content">
+
+            <div class="footer-blogs">
+                <h2>BLOGS</h2>
+                <a href="/HTML/all-posts.html"><h3>All Posts</h3></a>
+                <a href="/HTML/indoor.html"><h3>Indoor Plants</h3></a>
+                <a href="/HTML/outdoor.html"><h3>Outdoor Plants</h3></a>
+                <a href="/HTML/edible.html"><h3>Edible Plants</h3></a>
+                <a href="/HTML/animal.html"><h3>Animal Friendly Plants</h3></a>
+            </div>
+
+            <div class="footer-info">
+                <h2>INFO</h2>
+                <a href=""><h3>About Me</h3></a>
+                <a href=""><h3>Contact Me</h3></a>
+            </div>
+
+        </div>
+
+    </footer>
 </body>
 
 </html>
