--- a/HTML/indoor.html
+++ b/HTML/indoor.html
@@ -81,7 +81,32 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <div class="footer-logo">
+            <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady">
+        </div>
+
+        <div class="footer-content">
+
+            <div class="footer-blogs">
+                <h2>BLOGS</h2>
+                <a href="/HTML/all-posts.html"><h3>All Posts</h3></a>
+                <a href="/HTML/indoor.html"><h3>Indoor Plants</h3></a>
+                <a href="/HTML/outdoor.html"><h3>Outdoor Plants</h3></a>
+                <a href="/HTML/edible.html"><h3>Edible Plants</h3></a>
+                <a href="/HTML/animal.html"><h3>Animal Friendly Plants</h3></a>
+            </div>
+
+            <div class="footer-info">
+                <h2>INFO</h2>
+                <a href=""><h3>About Me</h3></a>
+                <a href=""><h3>Contact Me</h3></a>
+            </div>
+
+        </div>
+
+    </footer>
 </body>
 
 </html>
