tweaking and making it all pretty

--- a/HTML/Admin/admin-login.html
+++ b/HTML/Admin/admin-login.html
@@ -67,13 +67,17 @@
 
                         <form id="login" class="login-form">
 
-                            <label for="username">User Name:</label>
-                            <input type="text" name="username" id="username" placeholder="Enter your username">
+                            <div class="login-form-username">
+                                <label for="username">User Name:</label>
+                                <input type="text" name="username" id="username" placeholder="Enter your username">
+                            </div>
                     
-                            <label for="password">Password:</label>
-                            <input type="password" name="password" id="password" placeholder="Enter your password">
+                            <div class="login-form-password">
+                                <label for="password">Password:</label>
+                                <input type="password" name="password" id="password" placeholder="Enter your password">
+                            </div>
                     
-                            <button type="submit">Login</button>
+                            <button type="submit" class="login-button">Login</button>
 
                         </form>
 
@@ -86,32 +90,6 @@
 
     </main>
 
-    <footer>
-
-        <div class="footer-logo">
-            <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady">
-        </div>
-
-        <div class="footer-content">
-
-            <div class="footer-blogs">
-                <h2>BLOGS</h2>
-                <a href="/HTML/all-posts.html"><h3>All Posts</h3></a>
-                <a href="/HTML/indoor.html"><h3>Indoor Plants</h3></a>
-                <a href="/HTML/outdoor.html"><h3>Outdoor Plants</h3></a>
-                <a href="/HTML/edible.html"><h3>Edible Plants</h3></a>
-                <a href="/HTML/animal.html"><h3>Animal Friendly Plants</h3></a>
-            </div>
-
-            <div class="footer-info">
-                <h2>INFO</h2>
-                <a href=""><h3>About Me</h3></a>
-                <a href=""><h3>Contact Me</h3></a>
-            </div>
-
-        </div>
-
-    </footer>
 </body>
 
 </html>
