added some leafs

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,6 +62,10 @@
 
             <div class="welcome-background">
 
+                <div class="leafy-background">
+                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
+                </div>
+
                 <div class="framed-logo">
 
                     <img src="/MEDIA/background/decorativeborder2.png" alt="" class="frame">
