--- a/HTML/index.html
+++ b/HTML/index.html
@@ -73,7 +73,7 @@
                     <div class="logo-inside-frame">
                         <h2>Welcome to</h2>
                         <img src="/MEDIA/logo/greenlogo.png" alt="">
-                        <h1>BLOGG</h1>
+                        <h1><img src="/MEDIA/background/swirls.png" alt="">BLOGG<img src="/MEDIA/background/swirls2.png" alt=""></h1>
                     </div>
                 </div>
             </div>
