tweaking the tweak

--- a/HTML/Admin/admin-blog-post.html
+++ b/HTML/Admin/admin-blog-post.html
@@ -80,7 +80,7 @@
                         <div class="right-s-box">
 
                             <div class="right-s-text">
-                                <h2>About Me</h2>
+                                <h2>Editing Post</h2>
 
                                 <a href="/HTML/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
