making a better design

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -66,10 +66,18 @@
                     <img src="/MEDIA/background/leafy-background.png.png" alt="">
                 </div>
 
+                <div class="leafy-background2">
+                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
+                </div>
+                
+                <div class="leafy-background3">
+                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
+                </div>
+
                 <div class="framed-logo">
 
-                    <img src="/MEDIA/background/decorativeborder2.png" alt="" class="frame">
-    
+                    <!-- <img src="/MEDIA/background/decorativeborder2.png" alt="" class="frame"> -->
+
                     <div class="logo-inside-frame">
                         <h2>Welcome to</h2>
                         <img src="/MEDIA/logo/greenlogo.png" alt="">
