--- a/HTML/blog-post-detail.html
+++ b/HTML/blog-post-detail.html
@@ -80,15 +80,16 @@
                         <div class="right-s-box">
 
                             <div class="right-s-text">
-                                <h2>About Me</h2>
+                                <h2>Did You Enjoy<br>The Read?</h2>
 
                                 <a href="/HTML/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
-                                <p>Greetings fellow plant enthusiasts! I'm The Crazy Plant Lady, a soul who found her sanctuary amidst the bustling chaos of urban life through the tender embrace of plants.</p>
-                                <p>My journey began with a few humble succulents adorning my apartment windowsill, but it didn't take long for their leafy charms to capture my heart and ignite a passion within me.</p>
-                                <p>Join me on this journey of growth, resilience, and endless botanical wonders. Together, let's embrace the magic of plants and nurture our spirits as we cultivate a greener, more vibrant world. Whether you're a seasoned plant parent or a budding enthusiast, there's always room in my digital garden for you. So, grab your watering can and let's sow the seeds of joy and discovery together!</p>
+                                <p>Checkout My Other Blogs with similar content based on this Posts Tags:</p>
+
+                                <div class="redirect-link">
+                                </div>
     
                                 <div class="right-s-info" id="rightSInfo">
                                     <p><span>Total Posts:</span> <span id="totalPosts"></span></p>
