--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -63,7 +63,7 @@
 
             <div class="scroll-content">
 
-                <h1>All Blog Posts</h1>
+                <h1><span>All Blog</span> Posts</h1>
 
                 <div class="all-blogs">
 
