--- a/HTML/animal.html
+++ b/HTML/animal.html
@@ -55,7 +55,7 @@
         <section class="main-content">
             
             <div class="scroll-content">
-                <h1>"Animal Friendly" Plants Blogs</h1>
+                <h1><span>Animal Friendly Plants</span> Blogs</h1>
                 <div class="all-blogs"></div>
             </div>
 
