--- a/HTML/edible.html
+++ b/HTML/edible.html
@@ -54,7 +54,7 @@
     <main>
         <section class="main-content">
             <div class="scroll-content">
-                <h1>"Edible" Plants Blogs</h1>
+                <h1><span>Edible Plants</span> Blogs</h1>
                 <div class="all-blogs"></div>
             </div>
             
