--- a/HTML/index.html
+++ b/HTML/index.html
@@ -96,7 +96,7 @@
 
                 <div class="newly-posted-container">
 
-                    <h2>Freshly Picked Posts</h2>
+                    <h2><span>Freshly Picked</span> Posts</h2>
 
                     <div class="newly-posted-carousel">
                         <div class="newly-posted">
