--- a/HTML/indoor.html
+++ b/HTML/indoor.html
@@ -56,7 +56,7 @@
         <section class="main-content">
 
             <div class="scroll-content">
-                <h1>"Indoor" Plants Blogs</h1>
+                <h1><span>Indoor Plants</span> Blogs</h1>
                 <div class="all-blogs"></div>
             </div>
 
