--- a/HTML/outdoor.html
+++ b/HTML/outdoor.html
@@ -55,7 +55,7 @@
         <section class="main-content">
 
             <div class="scroll-content">
-                <h1>"Outdoor" Plants Blogs</h1>
+                <h1><span>Outdoor Plants</span> Blogs</h1>
                 <div class="all-blogs"></div>
             </div>
 
