making a filter for all post

--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -65,6 +65,22 @@
 
                 <h1><span>All Blog</span> Posts</h1>
 
+                <div class="filters">
+
+                    <label for="dateFilter">Sort by Date:</label>
+                    <select id="dateFilter">
+                        <option value="latest">Latest</option>
+                        <option value="oldest">Oldest</option>
+                    </select>
+
+                    <label for="alphabeticalFilter">Sort Alphabetically:</label>
+                    <select id="alphabeticalFilter">
+                        <option value="ascending">A to Z</option>
+                        <option value="descending">Z to A</option>
+                    </select>
+                    
+                </div>
+
                 <div class="all-blogs">
 
                 </div>
@@ -76,6 +92,10 @@
                 <div class="right-s-content">
 
                     <div class="right-s-background">
+
+                        <div class="gobackbutton">
+                            <a href="javascript:window.history.back();"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                        </div>
 
                         <div class="right-s-box">
 
