--- a/HTML/index.html
+++ b/HTML/index.html
@@ -107,7 +107,7 @@
 
                 <div class="all-posts-container">
 
-                    <h2>All Posts</h2>
+                    <h2><span>All</span> Posts</h2>
 
                     <div class="all-posts-index">
 
