its sima working

--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -78,7 +78,9 @@
                         <option value="ascending">A to Z</option>
                         <option value="descending">Z to A</option>
                     </select>
-                    
+
+                    <button id="applyFiltersButton">Filter</button>
+
                 </div>
 
                 <div class="all-blogs">
