made the filter button pretty, and deleted the first filter button

--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -67,24 +67,12 @@
 
                 <div class="filters">
 
-                    <div class="filter-date-abc">
-
-                        <div class="filter-date">
-                            <label for="dateFilter">Sort:</label>
-                            <select id="dateFilter">
-                                <option value="latest">Latest</option>
-                                <option value="oldest">Oldest</option>
-                            </select>
-                        </div>
-    
-                        <div class="filter-abc">
-                            <label for="alphabeticalFilter">Sort:</label>
-                            <select id="alphabeticalFilter">
-                                <option value="ascending">A to Z</option>
-                                <option value="descending">Z to A</option>
-                            </select>
-                        </div>
-
+                    <div class="filter-abc">
+                        <select id="alphabeticalFilter" class="filter-abc-box">
+                            <option value="">Sort By:</option>
+                            <option value="ascending">A to Z</option>
+                            <option value="descending">Z to A</option>
+                        </select>
                     </div>
 
                     <button id="applyFiltersButton" class="applyfilters">Filter</button>
