I ungrouped the HTML folder, and changed the links to the new HTML links

--- a/Admin/admin-blog-post.html
+++ b/Admin/admin-blog-post.html
@@ -25,8 +25,7 @@
       
     <header>
         <nav>
-
-            <a href="/HTML/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
@@ -60,7 +59,7 @@
                             <div class="right-s-text">
                                 <h2>Editing Post</h2>
 
-                                <a href="/HTML/Admin/admin-login.html">
+                                <a href="/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
 
