--- a/Admin/admin-create.html
+++ b/Admin/admin-create.html
@@ -24,7 +24,7 @@
     <header>
         <nav>
 
-            <a href="/HTML/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
@@ -41,7 +41,7 @@
 
                     <div class="logo-inside-frame">
 
-                        <a href="/HTML/Admin/admin-page.html" class="gobackbutton"><i class="fa-solid fa-arrow-left"></i>Go back to Admin Page</a>
+                        <a href="/Admin/admin-page.html" class="gobackbutton"><i class="fa-solid fa-arrow-left"></i>Go back to Admin Page</a>
 
                         <form id="newBlogForm" class="inside">
 
