--- a/Admin/admin-login.html
+++ b/Admin/admin-login.html
@@ -24,7 +24,7 @@
     <header>
         <nav>
 
-            <a href="/HTML/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
@@ -50,8 +50,6 @@
                 </div>
 
                 <div class="framed-logo">
-
-                    <!-- <img src="/MEDIA/background/decorativeborder2.png" alt="" class="frame"> -->
 
                     <div class="logo-inside-frame">
 
