--- a/Admin/admin-page.html
+++ b/Admin/admin-page.html
@@ -25,7 +25,7 @@
     <header>
         <nav>
 
-            <a href="/HTML/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
@@ -62,8 +62,8 @@
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
-                                <a href="/HTML/Admin/admin-create.html" class="admin-button" id="create-button">Create Post</a>
-                                <a href="/HTML/Admin/admin-login.html" class="admin-button" id="loggout-button">Logg Out</a>
+                                <a href="/Admin/admin-create.html" class="admin-button" id="create-button">Create Post</a>
+                                <a href="/Admin/admin-login.html" class="admin-button" id="loggout-button">Logg Out</a>
     
                                 <div class="right-s-info">
                                     <p><span>Total Posts:</span> <span id="totalPosts"></span></p>
