--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <nav>
 
-            <a href="/HTML/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
@@ -78,8 +78,6 @@
 
                 <div class="framed-logo">
 
-                    <!-- <img src="/MEDIA/background/decorativeborder2.png" alt="" class="frame"> -->
-
                     <div class="logo-inside-frame">
                         <h2>Welcome to</h2>
                         <img src="/MEDIA/logo/greenlogo.png" alt="">
@@ -127,7 +125,7 @@
                             <div class="right-s-text">
                                 <h2>About Me</h2>
 
-                                <a href="/HTML/Admin/admin-login.html">
+                                <a href="/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
@@ -163,11 +161,11 @@
 
             <div class="footer-blogs">
                 <h2>BLOGS</h2>
-                <a href="/HTML/all-posts.html"><h3>All Posts</h3></a>
-                <a href="/HTML/indoor.html"><h3>Indoor Plants</h3></a>
-                <a href="/HTML/outdoor.html"><h3>Outdoor Plants</h3></a>
-                <a href="/HTML/edible.html"><h3>Edible Plants</h3></a>
-                <a href="/HTML/animal.html"><h3>Animal Friendly Plants</h3></a>
+                <a href="all-posts.html"><h3>All Posts</h3></a>
+                <a href="indoor.html"><h3>Indoor Plants</h3></a>
+                <a href="outdoor.html"><h3>Outdoor Plants</h3></a>
+                <a href="edible.html"><h3>Edible Plants</h3></a>
+                <a href="animal.html"><h3>Animal Friendly Plants</h3></a>
             </div>
 
             <div class="footer-info">
