--- a/outdoor.html
+++ b/outdoor.html
@@ -14,13 +14,13 @@
 </head>
 
 <body>
-    <script src="/JS/indoor.js" defer></script>
+    <script src="/JS/outdoor.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
 
     <header>
         <nav>
 
-            <a href="/HTML/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
@@ -52,11 +52,10 @@
     </header>
 
     <main>
-
         <section class="main-content">
 
             <div class="scroll-content">
-                <h1><span>Indoor Plants</span> Blogs</h1>
+                <h1><span>Outdoor Plants</span> Blogs</h1>
                 <div class="all-blogs"></div>
             </div>
 
@@ -75,7 +74,7 @@
                             <div class="right-s-text">
                                 <h2>About Me</h2>
 
-                                <a href="/HTML/Admin/admin-login.html">
+                                <a href="/Admin/admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
@@ -110,11 +109,11 @@
 
             <div class="footer-blogs">
                 <h2>BLOGS</h2>
-                <a href="/HTML/all-posts.html"><h3>All Posts</h3></a>
-                <a href="/HTML/indoor.html"><h3>Indoor Plants</h3></a>
-                <a href="/HTML/outdoor.html"><h3>Outdoor Plants</h3></a>
-                <a href="/HTML/edible.html"><h3>Edible Plants</h3></a>
-                <a href="/HTML/animal.html"><h3>Animal Friendly Plants</h3></a>
+                <a href="all-posts.html"><h3>All Posts</h3></a>
+                <a href="indoor.html"><h3>Indoor Plants</h3></a>
+                <a href="outdoor.html"><h3>Outdoor Plants</h3></a>
+                <a href="edible.html"><h3>Edible Plants</h3></a>
+                <a href="animal.html"><h3>Animal Friendly Plants</h3></a>
             </div>
 
             <div class="footer-info">
