--- a/Admin/admin-login.html
+++ b/Admin/admin-login.html
@@ -35,6 +35,8 @@
 
         <section class="welcome-logo">
 
+            <h1>Login</h1>
+
             <div class="welcome-background">
 
                 <div class="leafy-background">
