tweaking the website

--- a/Admin/admin-login.html
+++ b/Admin/admin-login.html
@@ -39,17 +39,9 @@
 
             <div class="welcome-background">
 
-                <div class="leafy-background">
-                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
-                </div>
-
-                <div class="leafy-background2">
-                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
-                </div>
-                
-                <div class="leafy-background3">
-                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
-                </div>
+                <div class="background-photo">
+                    <img src="/MEDIA/background/painted-leafy-background.jpg" alt="">
+                 </div>
 
                 <div class="framed-logo">
 
@@ -58,7 +50,7 @@
                         <form id="login" class="login-form">
 
                             <div class="login-form-username">
-                                <label for="username">User Name:</label>
+                                <label for="username">Username:</label>
                                 <input type="text" name="username" id="username" placeholder="Enter your username">
                             </div>
                     
@@ -76,6 +68,7 @@
                         </form>
 
                     </div>
+
                 </div>
             </div>
 
