--- a/index.html
+++ b/index.html
@@ -63,27 +63,21 @@
         <section class="welcome-logo">
 
             <div class="welcome-background">
-
-                <div class="leafy-background">
-                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
-                </div>
-
-                <div class="leafy-background2">
-                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
-                </div>
                 
-                <div class="leafy-background3">
-                    <img src="/MEDIA/background/leafy-background.png.png" alt="">
-                </div>
+                <div class="background-photo">
+                    <img src="/MEDIA/background/painted-leafy-background.jpg" alt="">
+                 </div>
 
                 <div class="framed-logo">
 
                     <div class="logo-inside-frame">
                         <h2>Welcome to</h2>
-                        <img src="/MEDIA/logo/greenlogo.png" alt="">
-                        <h1><img src="/MEDIA/background/swirls.png" alt="">BLOGG<img src="/MEDIA/background/swirls2.png" alt=""></h1>
-                    </div>
+                        <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady Logo">
+                        <h1><img src="/MEDIA/background/swirls.png" alt="A Caligraphic Decorative swirl">BLOGG<img src="/MEDIA/background/swirls2.png" alt="A Caligraphic Decorative swirl"></h1>
+                    </div> 
+
                 </div>
+
             </div>
 
         </section>
