made a functining searchbar

--- a/Admin/admin-login.html
+++ b/Admin/admin-login.html
@@ -23,11 +23,9 @@
 
     <header>
         <nav>
-
-            <a href="index.html" class="logo">
+            <a href="/index.html" class="logo">
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
-
         </nav>
     </header>
 
