--- a/all-posts.html
+++ b/all-posts.html
@@ -79,6 +79,10 @@
 
                 </div>
 
+                <div class="searchbar">
+                    <input type="text" id="searchInput" placeholder="Search post...">
+                </div>
+
                 <div class="all-blogs">
 
                 </div>
