--- a/edible.html
+++ b/edible.html
@@ -53,8 +53,15 @@
 
     <main>
         <section class="main-content">
+            
             <div class="scroll-content">
+
                 <h1><span>Edible Plants</span> Blogs</h1>
+
+                <div class="searchbar">
+                    <input type="text" id="searchInput" placeholder="Search post...">
+                </div>
+
                 <div class="all-blogs"></div>
             </div>
             
