--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 
                     <h2><span>All</span> Posts</h2>
 
+                    <div class="searchbar">
+                        <input type="text" id="searchInput" placeholder="Search post...">
+                    </div>
+
                     <div class="all-posts-index">
 
                     </div>
