--- a/indoor.html
+++ b/indoor.html
@@ -57,6 +57,11 @@
 
             <div class="scroll-content">
                 <h1><span>Indoor Plants</span> Blogs</h1>
+
+                <div class="searchbar">
+                    <input type="text" id="searchInput" placeholder="Search post...">
+                </div>
+
                 <div class="all-blogs"></div>
             </div>
 
