--- a/outdoor.html
+++ b/outdoor.html
@@ -56,6 +56,11 @@
 
             <div class="scroll-content">
                 <h1><span>Outdoor Plants</span> Blogs</h1>
+
+                <div class="searchbar">
+                    <input type="text" id="searchInput" placeholder="Search post...">
+                </div>
+                
                 <div class="all-blogs"></div>
             </div>
 
