--- a/animal.html
+++ b/animal.html
@@ -55,7 +55,13 @@
         <section class="main-content">
             
             <div class="scroll-content">
+                
                 <h1><span>Animal Friendly Plants</span> Blogs</h1>
+
+                <div class="searchbar">
+                    <input type="text" id="searchInput" placeholder="Search post...">
+                </div>
+
                 <div class="all-blogs"></div>
             </div>
 
