made the searchbar functional

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <ul>
 
                 <div class="searchbar-header">
-                    <input type="text" id="searchInput" placeholder="Search post...">
+                    <div class="searchbar-header-content">
+                        <input type="text" id="searchInput" placeholder="Search Blog Post..."><i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
                     <div id="searchResults" class="search-results"></div>
                 </div>
                 
