--- a/animal.html
+++ b/animal.html
@@ -18,6 +18,7 @@
     <script src="/JS/updated-post-info.js" defer></script>
 
     <header>
+
         <nav>
 
             <a href="index.html" class="logo">
@@ -25,6 +26,14 @@
             </a>
 
             <ul>
+
+                <div class="searchbar-header">
+                    <div class="searchbar-header-content">
+                        <input type="text" id="searchInput" placeholder="Search Blog Post..."><i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <div id="searchResults" class="search-results"></div>
+                </div>
+                
                 <li>
                     <a href="all-posts.html" class="head-link1">All Posts</a>
                     <a href="all-posts.html" class="head-icon1"><i class="fa-solid fa-book-open"></i></a>
@@ -49,6 +58,7 @@
             </ul>
 
         </nav>
+
     </header>
 
     <main>
