made a cool scroll transition, tweaking the index page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     
     <main>   
 
-        <section class="welcome-logo">
+        <section class="welcome-logo" id="section-scroll">
 
             <div class="welcome-background">
 
@@ -178,7 +178,7 @@
 
         </section>
 
-        <section class="main-content">
+        <section class="main-content" id="section-scroll">
 
             <div class="scroll-content">
 
@@ -197,8 +197,10 @@
 
                     <h2><span>All</span> Posts</h2>
 
-                    <div class="searchbar">
-                        <input type="text" id="searchInput" placeholder="Search post...">
+                    <div class="searchbar-content">
+                        <div class="searchbar">
+                            <input type="text" id="searchbarInput" placeholder="Search Blog Post..."><i class="fa-solid fa-magnifying-glass"></i>                    
+                        </div>
                     </div>
 
                     <div class="all-posts-index">
